# DriveSimulator

./: .clangd  .gitignore  CMakeLists.txt  README.md  joystickcheatsheet.xcf  keyboardcheatsheet.xcf  logo.xcf  shovelcheatsheet.xcf
.github/workflows/: build_release.yml
blender/: hull.blend  robotmodel.blend
release/: gradient.fs  hull.glb  lighting.fs  rebuilt.mtl  robotmodel.glb
shell/: index.html
src/: CMakeLists.txt  config.h  control.cpp  control.h  debugrenderer.h  game.cpp  jolt.cpp  jolt.h  leaderboard.inc  main.cpp  nkutils.cpp  nkutils.h  rendertexture.cpp  rendertexture.h  scene.h  sqlite.cmake
